--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,10 @@
 {
   "name": "OrderCloud UI",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "devDependencies": {
     "angular-mocks": "~1.4.0",
-    "angular-ui-utils": "~0.2.3"
+    "angular-ui-utils": "~0.2.3",
+    "angular-toastr": "~1.4.1"
   },
   "homepage": "https://github.com/Four51/OrderCloud-UI-AngularJS",
   "authors": [
